# antigen-v4

./: .gitignore  Cargo.toml  TODO  rust-toolchain.toml
crates/antigen-cgmath/: Cargo.toml
crates/antigen-cgmath/src/: lib.rs  systems.rs
crates/antigen-cgmath/src/components/: eye_position.rs  look_at.rs  mod.rs  near_plane.rs  orientation.rs  perspective_projection.rs  position.rs  projection_matrix.rs  up_vector.rs  velocity.rs  view_projection_matrix.rs
crates/antigen-components/: Cargo.toml
crates/antigen-components/src/: image.rs  image_component.rs  lib.rs  name.rs
crates/antigen-hid/: Cargo.toml
crates/antigen-hid/src/: hid_descriptor.rs  lib.rs
crates/antigen-hid/src/devices/: device.rs  device_id.rs  device_name.rs  mod.rs
crates/antigen-hid/src/report/: mod.rs
crates/antigen-hid/src/report/global_state/: mod.rs  usage_page.rs
crates/antigen-hid/src/report/input_report/: mod.rs  report_value.rs
crates/antigen-hid/src/report/local_state/: mod.rs  usage.rs
crates/antigen-hid/src/report/report_descriptor/: collection_type.rs  item.rs  item_data.rs  mod.rs  report_descriptor_data.rs  (+1 more)
crates/antigen-rapier3d/: Cargo.toml
crates/antigen-rapier3d/src/: lib.rs
crates/antigen-resources/: Cargo.toml
crates/antigen-resources/src/: lib.rs  systems.rs
crates/antigen-resources/src/time/: mod.rs
crates/antigen-tracing/: Cargo.toml
crates/antigen-tracing/src/: fields.rs  lib.rs  parent_id.rs  span_id.rs  trace_event.rs  trace_field.rs  trace_leaf.rs  trace_leaf_id.rs  trace_receiver.rs  trace_sender.rs  trace_thread.rs  trace_tree.rs  trace_visitor.rs
crates/antigen-wgpu/: Cargo.toml
crates/antigen-wgpu/src/: cast_slice.rs  lib.rs  render_pass.rs  render_pass_state.rs  surface_state.rs  systems.rs  texture_data.rs  wgpu_manager.rs
crates/antigen-wgpu/src/components/: buffer_component.rs  buffer_write.rs  mod.rs  render_pass_component.rs  surface_component.rs  texture_component.rs  texture_write.rs  uniform_buffer_component.rs
crates/antigen-wgpu/src/components/ecs_pattern/: mod.rs  pipeline_layout_component.rs  shader_component.rs
crates/antigen-winit/: Cargo.toml
crates/antigen-winit/src/: lib.rs  systems.rs  window_manager.rs  window_state.rs
crates/antigen-winit/src/components/: always_on_top.rs  cursor_grab.rs  cursor_icon.rs  cursor_position.rs  cursor_visible.rs  decorations.rs  fullscreen.rs  ime_position.rs  inner_size.rs  max_inner_size.rs  maximized.rs  min_inner_size.rs  minimized.rs  mod.rs  outer_position.rs  redraw_mode.rs  resizable.rs  visible.rs  window_component.rs  window_title.rs
crates/atomic-id/: Cargo.toml
crates/atomic-id/src/: lib.rs
crates/lazy/src/: lib.rs
crates/legion-debugger/: Cargo.toml
crates/legion-debugger-macros/: Cargo.toml
crates/legion-debugger-macros/src/: lib.rs  register_component.rs  register_resource.rs
crates/legion-debugger/src/: lib.rs
crates/legion-debugger/src/parser/: archetypes.rs  entities.rs  mod.rs
crates/legion-debugger/src/registry/: components.rs  mod.rs  resources.rs
crates/on-change/: Cargo.toml
crates/on-change/src/: lib.rs
crates/plugin-registry/: Cargo.toml
crates/plugin-registry-macros/: Cargo.toml
crates/plugin-registry-macros/src/: iter.rs
crates/plugin-registry/src/: init.rs  lib.rs  register.rs
crates/reflection/: Cargo.toml
crates/reflection-tui/: Cargo.toml
crates/reflection-tui/src/: layout_builder.rs  lib.rs
crates/reflection-tui/src/data_widget/: mod.rs  widget_bool.rs  widget_byte_array.rs  widget_char.rs  widget_float.rs  widget_int.rs  widget_list.rs  widget_map.rs  widget_newtype.rs  widget_option.rs  widget_string.rs  widget_struct.rs  widget_unit.rs
crates/reflection-tui/src/reflection_widget/: mod.rs  state.rs
crates/reflection/src/: data.rs  index.rs  lib.rs  path.rs  serializer.rs
crates/remote-channel/: Cargo.toml
crates/remote-channel/src/: lib.rs
crates/rusb-test/: Cargo.toml
crates/rusb-test/report_descriptors/: VID_044f_PID_b679.hrd  VID_044f_PID_b687.hrd
crates/rusb-test/src/: error.rs  fallbacks.rs  main.rs  tests.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: main.rs
crates/sandbox/src/assemblages/: mod.rs
crates/sandbox/src/components/: aspect_ratio.rs  far_plane.rs  field_of_view.rs  look_to.rs  mod.rs  orthographic_projection.rs  position.rs  projection_matrix.rs  sphere_bounds.rs  uniform_write.rs  velocity.rs  view_matrix.rs  view_projection_matrix.rs  visible.rs
crates/sandbox/src/renderers/: mod.rs
crates/sandbox/src/renderers/boids/: mod.rs
crates/sandbox/src/renderers/bunnymark/: mod.rs
crates/sandbox/src/renderers/conservative_raster/: mod.rs
crates/sandbox/src/renderers/cube/: compute.wgsl  frustum.wgsl  mod.rs  plane.wgsl  quaternion.wgsl  render.wgsl
crates/sandbox/src/renderers/ecs_triangle/: mod.rs
crates/sandbox/src/renderers/hello_triangle/: mod.rs
crates/sandbox/src/renderers/mipmap/: mod.rs
crates/sandbox/src/renderers/msaa_lines/: mod.rs
crates/sandbox/src/renderers/shadow/: mod.rs
crates/sandbox/src/renderers/skybox/: mod.rs
crates/sandbox/src/renderers/skybox/models/: marauder.mtl
crates/sandbox/src/renderers/texture_arrays/: mod.rs
crates/sandbox/src/renderers/water/: mod.rs
crates/sandbox/src/resources/: mod.rs
crates/sandbox/src/resources/crossterm/: mod.rs
crates/sandbox/src/systems/: crossterm.rs  game.rs  mod.rs  timing.rs  tui_debugger.rs
crates/sandbox/src/threads/: game_thread.rs  mod.rs  tui_input_thread.rs  tui_render_thread.rs  winit_thread.rs
crates/tracing-debugger/: Cargo.toml
crates/tracing-debugger/src/: env_log_tracer.rs  lib.rs  trace_span.rs  trace_tree.rs
crates/tracing-debugger/src/layers/: layer_reflection.rs  mod.rs
crates/tracing-test/: Cargo.toml
crates/tracing-test/src/: main.rs
crates/tui-debugger/: Cargo.toml
crates/tui-debugger/src/: archetype_debugger.rs  entity_debugger.rs  lib.rs  resource_debugger.rs  schedule_debugger.rs  style.rs
crates/tui-test/: Cargo.toml
crates/tui-test/src/: main.rs  pong.rs
crates/tui-widgets/: Cargo.toml
crates/tui-widgets/src/: lib.rs  tab_container.rs
(+8 files in other folders)
