[package]
name = "antigen-components"
version = "0.1.0"
edition = "2018"

[features]
default = ["registry-inventory"]
registry-linkme = ["linkme", "legion-debugger/registry-linkme"]
registry-inventory = ["inventory", "legion-debugger/registry-inventory"]

[dependencies]
legion = "0.4.0"

serde = { version = "1.0.130", features = ["derive"] }

linkme = { version = "0.2.7", optional = true }
inventory = { version = "0.1.10", optional = true }

plugin-registry = { path = "../plugin-registry" }
legion-debugger = { path = "../legion-debugger" }
