[package]
name = "antigen-components"
version = "0.1.0"
edition = "2018"

[dependencies]
legion = "0.4.0"

serde = { version = "1.0.130", features = ["derive"] }

plugin-registry = { path = "../plugin-registry" }
legion-debugger = { path = "../legion-debugger" }
on-change = { path = "../on-change" }
