[package]
name = "antigen-rapier3d"
version = "0.1.0"
edition = "2018"

[dependencies]
legion = "0.4.0"

serde = { version = "1.0.130", features = ["derive"] }
rapier3d = { version = "0.11.1", features = ["serde-serialize"] }

antigen-cgmath = { path = "../antigen-cgmath" }
legion-debugger = { path = "../legion-debugger" }
