[package]
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"
name = "legion-debugger"
version = "0.1.0"

[dependencies]
legion = "0.4.0"
uuid = "0.8.2"

tui = { version = "0.16.0", default-features=false, features = ["crossterm"] }

plugin-registry = { path = "../plugin-registry" }
reflection = { path = "../reflection" }
legion-debugger-macros = { path = "../legion-debugger-macros" }
