[package]
name = "plugin-registry"
version = "0.1.0"
edition = "2018"

[features]
registry-linkme = ["linkme", "plugin-registry-macros/registry-linkme"]
registry-inventory = ["inventory", "plugin-registry-macros/registry-inventory"]

[dependencies]
plugin-registry-macros = { path = "../plugin-registry-macros" }

linkme = { version = "0.2.7", optional = true }
inventory = { version = "0.1.10", optional = true }
