[package]
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"
name = "sandbox"
version = "0.1.0"

[features]
default = ["plugin-registry-inventory", "profiling/profile-with-tracing"]
plugin-registry-linkme = ["linkme", "legion-debugger/registry-linkme"]
plugin-registry-inventory = ["inventory", "legion-debugger/registry-inventory"]

[dependencies]
legion = "0.4.0"
crossterm = "0.21.0"
profiling = "1.0.3"
log = "0.4.14"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
serde = "1.0.126"
winit = "0.25.0"
wgpu = "0.11.0"
rand = "0.8.4"
parking_lot = "0.11.1"
crossbeam-channel = "0.5.1"
futures = "0.3.17"
pollster = "0.2.4"
cgmath = "0.18.0"

tui = { version = "0.16.0", default-features=false, features = ["crossterm"] }
bytemuck = { version = "1.7.2", features = ["derive"] }

linkme = {version = "0.2.6", optional = true}
inventory = {version = "0.1.10", optional = true}

plugin-registry = { path = "../plugin-registry" }
reflection = { path = "../reflection" }
legion-debugger = { path = "../legion-debugger" }
tui-debugger = { path = "../tui-debugger" }
reflection-tui = { path = "../reflection-tui" }
antigen-winit = { path = "../antigen-winit" }
antigen-wgpu = { path = "../antigen-wgpu" }
remote-channel = { path = "../remote-channel" }
