[package]
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"
name = "sandbox"
version = "0.1.0"

[features]
default = ["plugin-registry/registry-inventory", "profiling/profile-with-tracing"]

[dependencies]
crossterm = "0.22.1"
profiling = "1.0.3"
log = "0.4.14"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
serde = "1.0.126"
winit = "0.25.0"
wgpu = {version ="0.11.0", features = ["spirv"]}
rand = "0.8.4"
parking_lot = "0.11.1"
crossbeam-channel = "0.5.1"
futures = "0.3.17"
pollster = "0.2.4"
png = "0.17.2"
obj = "0.10.2"
ddsfile = "0.4.0"
noise = "0.7.0"

legion = {version = "0.4.0", features = ["extended-tuple-impls"]}
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
bytemuck = { version = "1.7.2", features = ["derive"] }
cgmath = {version = "0.18.0", features = ["serde", "swizzle"]}

plugin-registry = { path = "../plugin-registry" }
reflection = { path = "../reflection" }
legion-debugger = { path = "../legion-debugger" }
tui-debugger = { path = "../tui-debugger" }
reflection-tui = { path = "../reflection-tui" }
antigen-winit = { path = "../antigen-winit" }
antigen-wgpu = { path = "../antigen-wgpu" }
antigen-components = { path = "../antigen-components" }
antigen-resources = { path = "../antigen-resources" }
antigen-cgmath = { path = "../antigen-cgmath" }
antigen-rapier3d = { path = "../antigen-rapier3d" }
remote-channel = { path = "../remote-channel" }
lazy = { path = "../lazy" }
on-change = { path = "../on-change" }
