[package]
name = "tracing-debugger"
version = "0.1.0"
edition = "2018"

[dependencies]
tracing = "0.1.26"
tracing-core = "0.1.19"
tracing-serde = "0.1.2"
tracing-subscriber = "0.2.20"
tracing-log = "0.1.2"
env_logger = "0.9.0"
log = "0.4.14"
parking_lot = "0.11.1"

reflection = { path = "../reflection" }
