[package]
name = "tracing-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
crossbeam-channel = "0.5.1"
futures = "0.3.16"
async-std = "1.10.0"

profiling = {version = "1.0.3", features = ["profile-with-tracing"]}

antigen-tracing = { path = "../antigen-tracing" }
